# latex2mathml

./: .all-contributorsrc  .coderabbit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST  Makefile  Pipfile  README  README.md  README.rst  appveyor.yml  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  publish.yml  pypi.yml  python-ci.yml  python.yml  testpypi.yml
latex2mathml/: __init__.py  aggregator.py  commands.py  converter.py  element.py  exceptions.py  symbols_parser.py  tokenizer.py  unimathsymbols.txt  walker.py
test/: aggregator_test.py  symbol_parser_test.py
tests/: __init__.py  __main__.py  aggregator_test.py  command_test.py  conftest.py  converter_test.py  element_test.py  symbol_parser_test.py  test_aggregator.py  test_command.py  test_converter.py  test_issues.py  test_symbol_parser.py  test_tokenizer.py  test_walker.py  tokenizer_test.py
tests/__snapshots__/test_converter/: test_convert_to_element.html  test_convert_to_element_with_parent.html  test_converter[307-a].html  test_converter[307-b].html  test_converter[And].html  test_converter[Bbb-group].html  test_converter[Bmatrix].html  test_converter[LaTeX-with-style].html  test_converter[LaTeX].html  test_converter[Pr].html  test_converter[S].html  test_converter[TeX-with-style].html  test_converter[TeX].html  test_converter[above].html  test_converter[abovewithdelims].html  test_converter[acute].html  test_converter[align-nonumber].html  test_converter[align0].html  test_converter[align1].html  test_converter[arctg].html  test_converter[argmax].html  test_converter[array-with-horizontal-lines].html  test_converter[array-with-vertical-bar].html  test_converter[atop-and-atopwithdelims].html  test_converter[backslash-e].html  test_converter[big].html  test_converter[bigcirc].html  test_converter[bigl-smallmatrix-bigr].html  test_converter[binomial-coefficients].html  test_converter[binomial].html  test_converter[blackboard-bold].html  test_converter[bm].html  test_converter[bmod].html  test_converter[bold].html  test_converter[boldsymbol].html  test_converter[boxed-box].html  test_converter[bra].html  test_converter[brace-1].html  test_converter[brace].html  test_converter[braket].html  (+274 more)
viewer/: viewer.py
viewer/static/: mathml.js
viewer/static/mathml.css/: mathml.css
viewer/templates/: index.html
