[tool.poetry]
name = "latex2mathml"
version = "3.75.5"
repository = "https://github.com/roniemartinez/latex2mathml"
description = "Pure Python library for LaTeX to MathML conversion"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
include = ["latex2mathml/unimathsymbols.txt"]
readme = "README.md"
keywords = [
    "latex",
    "mathml"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.urls]
"Donate" = "https://www.buymeacoffee.com/roniemartinez"

[tool.poetry.scripts]
latex2mathml = "latex2mathml.converter:main"
l2m = "latex2mathml.converter:main"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.1.1"
black = "^23.3"
flake8 = "^6.0.0"
isort = "^5.12.0"
multidict = "^6.0.4"
mypy = "^1.2"
pyproject-flake8 = "^6.0.0.post1"
pytest = "^7.3.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
xmljson = "^0.2.0"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pkg_resources",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
extend-exclude = """
setup.py,
"""

[tool.pytest.ini_options]
addopts = """\
    --cov=latex2mathml \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
