[project]
name = "latex2mathml"
version = "3.78.0"
description = "Pure Python library for LaTeX to MathML conversion"
authors = [
    { name = "Ronie Martinez", email = "ronmarti18@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "latex",
    "mathml"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.9"
dependencies = [
]

[project.urls]
repository = "https://github.com/roniemartinez/latex2mathml"
"Donate" = "https://www.buymeacoffee.com/roniemartinez"

[project.scripts]
latex2mathml = "latex2mathml.converter:main"
l2m = "latex2mathml.converter:main"

[tool.poetry]
include = ["latex2mathml/unimathsymbols.txt"]

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^25.1.0"
isort = "^6.0.1"
multidict = "^6.4.3"
mypy = "^1.15.0"
pyproject-flake8 = "^7.0.0"
pytest = "^8.3.5"
pytest-clarity = "^1.0.1"
pytest-cov = "^6.1.1"
xmljson = "^0.2.1"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
extend-exclude = """
setup.py,
"""

[tool.pytest.ini_options]
addopts = """\
    --cov=latex2mathml \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
"""

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
