[metadata]
name = latex2mathml
version = 2.8.4
download_url = https://github.com/roniemartinez/latex2mathml/tarball/2.8.4
description = Pure Python library for LaTeX to MathML conversion
long_description = file:README.md
description-file = README.md
long_description_content_type = text/markdown
author = Ronie Martinez
author_email = ronmarti18@gmail.com
url = https://github.com/roniemartinez/latex2mathml
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: LaTeX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    latex2mathml

[options.package_data]
latex2mathml =
    unimathsymbols.txt

[wheel]
universal = 1

[pycodestyle]
max-line-length = 120
statistics = True